--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "vux-loader": "^1.1.11",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.8.2",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "weixin-js-sdk": "^1.2.0"
   },
   "dependencies": {
     "dateformat": "^3.0.2",
